--- a/index.html
+++ b/index.html
@@ -1,199 +1,282 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>KIPP – 8×8 Raster</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>KIPP – 8×8 Raster</title>
 
-<style>
-:root{
-  --violett: rgb(164, 27, 133);
-  --blau:    rgb(0, 107, 179);
-  --gruen:   rgb(0, 166, 82);
-  --orange:  rgb(249, 150, 30);
+  <style>
+    :root{
+      /* Farben */
+      --violett: rgb(164, 27, 133);
+      --blau:    rgb(0, 107, 179);
+      --gruen:   rgb(0, 166, 82);
+      --orange:  rgb(249, 150, 30);
 
-  --bg1: #3a231a;
-  --bg2: #1b0f0c;
+      /* Hintergrund */
+      --bg1: #3a231a;
+      --bg2: #1b0f0c;
 
-  --cell-gap: clamp(5px, 1.1vmin, 10px);
-  --cell-radius: clamp(6px, 1.1vmin, 12px);
+      /* Raster */
+      --cell-gap: clamp(5px, 1.1vmin, 10px);
+      --cell-radius: clamp(6px, 1.1vmin, 12px);
 
-  --floor: #d8c8ad;
+      /* “Schwarz” für Rahmen/Trenner */
+      --frame-black: #0b0b0b;
 
-  --cube-fill: #e3c9ad;
-  --cube-border: #7a4a34;
+      /* Floor */
+      --floor: #d8c8ad;
 
-  --slot-fill: #ead7be;
-  --slot-border: rgba(0,0,0,0.55);
-  --slot-border-w: 2px;
-}
+      /* Würfel */
+      --cube-fill: #e3cfb6;        /* etwas dunkler als vorher */
+      --cube-border: #7a4a34;      /* dein schönes Braun */
+      --cube-outline: 4px;
 
-html, body{ height:100%; }
+      /* Slots */
+      --slot-border: rgba(0,0,0,0.55);
+      --slot-fill: rgba(255,255,255,0.12); /* ganz leicht, damit “gefüllt” wirkt */
+    }
 
-body{
-  margin:0;
-  display:flex;
-  justify-content:center;
-  background:
-    radial-gradient(ellipse at top left, rgba(255,255,255,0.10), transparent 50%),
-    radial-gradient(ellipse at bottom, rgba(0,0,0,0.35), transparent 60%),
-    linear-gradient(180deg, var(--bg1), var(--bg2));
-  font-family: system-ui, sans-serif;
-}
+    html, body { height: 100%; }
 
-.stage{
-  width: min(94vw, 680px);
-  margin-top: 14vh;
-  display:flex;
-  justify-content:center;
-}
+    body{
+      margin:0;
+      display:flex;
+      justify-content:center;
 
-.board{
-  position:relative;
-  width:100%;
-  height:0;
-}
+      background:
+        radial-gradient(ellipse at top left, rgba(255,255,255,0.10), transparent 50%),
+        radial-gradient(ellipse at bottom, rgba(0,0,0,0.35), transparent 60%),
+        linear-gradient(180deg, var(--bg1), var(--bg2));
 
-.grid{
-  position:absolute;
-  inset:0;
-  display:grid;
-  grid-template-columns:repeat(8,1fr);
-  grid-template-rows:repeat(8,1fr);
-  gap:var(--cell-gap);
-}
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+    }
 
-.cell{
-  background:#0b0b0b;
-  border-radius:var(--cell-radius);
-  box-shadow:
-    0 0 0 1px rgba(255,255,255,0.035) inset,
-    0 10px 18px rgba(0,0,0,0.32);
-}
+    .stage{
+      width: min(94vw, 680px);
+      margin-top: 14vh;
+      display:flex;
+      justify-content:center;
+      align-items:flex-start;
+    }
 
-.c-orange{ background:var(--orange); }
-.c-gruen{ background:var(--gruen); }
-.c-violett{ background:var(--violett); }
-.c-blau{ background:var(--blau); }
+    .board{
+      position:relative;
+      width: 100%;
+      height: 0;               /* per JS */
+      overflow: visible;
+    }
 
-/* ================= FLOOR ================= */
-.floor{
-  position:absolute;
-  left:calc((100% - 7 * var(--cell-gap)) / 8 + var(--cell-gap));
-  top: calc((100% - 7 * var(--cell-gap)) / 8 + var(--cell-gap));
-  width:calc(6 * (100% - 7 * var(--cell-gap)) / 8 + 5 * var(--cell-gap));
-  height:calc(6 * (100% - 7 * var(--cell-gap)) / 8 + 5 * var(--cell-gap));
-  background:
-    linear-gradient(135deg, rgba(255,255,255,0.18), rgba(0,0,0,0.06)),
-    var(--floor);
-  border-radius:0;
-  z-index:2;
-  box-shadow:
-    inset 14px 14px 26px rgba(255,255,255,0.14),
-    inset -18px -18px 34px rgba(0,0,0,0.22),
-    inset 0 0 0 1px rgba(0,0,0,0.12);
-}
+    /* Außenrahmen: 4px schwarz + Radius */
+    .board::before{
+      content:"";
+      position:absolute;
+      inset:0;
+      border:4px solid var(--frame-black);
+      border-radius: clamp(12px, 2.2vmin, 20px);
+      pointer-events:none;
+      z-index: 50;
+      /* ganz dezenter Glanz innen */
+      box-shadow: inset 0 0 0 1px rgba(255,255,255,0.04);
+    }
 
-/* ================= CUBE ================= */
-.cube{
-  position:absolute;
-  z-index:5;
-  left:calc((100% - 7 * var(--cell-gap)) / 8 + var(--cell-gap));
-  top: calc((100% - 7 * var(--cell-gap)) / 8 + var(--cell-gap));
-  width:calc(3 * (100% - 7 * var(--cell-gap)) / 8 + 2 * var(--cell-gap));
-  height:calc(3 * (100% - 7 * var(--cell-gap)) / 8 + 2 * var(--cell-gap));
-  background:
-    linear-gradient(135deg, rgba(255,255,255,0.22), rgba(0,0,0,0.06)),
-    var(--cube-fill);
-  border:4px solid var(--cube-border);
-  border-radius:clamp(10px,2.2vmin,18px);
-  box-shadow:
-    0 12px 22px rgba(0,0,0,0.28),
-    0 0 0 1px rgba(255,255,255,0.10) inset;
-}
+    /* 8×8 Raster */
+    .grid{
+      position:absolute;
+      inset:0;
+      display:grid;
+      grid-template-columns: repeat(8, 1fr);
+      grid-template-rows: repeat(8, 1fr);
+      gap: var(--cell-gap);
+      z-index: 1;
+    }
 
-/* ================= SLOTS ================= */
-.slots{
-  position:absolute;
-  inset:0;
-  display:grid;
-  grid-template-columns:repeat(3,1fr);
-  grid-template-rows:repeat(3,1fr);
-  gap:var(--cell-gap);
-  padding:var(--cell-gap);
-}
+    .cell{
+      background: var(--frame-black);
+      border-radius: var(--cell-radius);
 
-.slot{
-  background:
-    linear-gradient(135deg, rgba(255,255,255,0.14), rgba(0,0,0,0.05)),
-    var(--slot-fill);
-  border:var(--slot-border-w) solid var(--slot-border);
-  border-radius:var(--cell-radius);
-  z-index:7;
+      /* 2px “Innenrahmen” pro Quadrat -> verhindert “Hintergrund blitzt durch” */
+      box-shadow:
+        inset 0 0 0 2px var(--frame-black),
+        0 10px 18px rgba(0,0,0,0.32);
+    }
 
-  /* REDUZIERTER, REALISTISCHER SCHATTEN */
-  box-shadow:
-    1px 1px 0 rgba(255,255,255,0.18) inset,
-    -1px -1px 0 rgba(0,0,0,0.08) inset,
+    /* farbige Randfelder */
+    .c-orange{ background: var(--orange); }
+    .c-gruen { background: var(--gruen);  }
+    .c-violett{ background: var(--violett); }
+    .c-blau  { background: var(--blau);   }
 
-    /* Kontakt-Schatten */
-    2px 2px 0 rgba(0,0,0,0.20),
+    /* Floor (6×6 innen) */
+    .floor{
+      position:absolute;
+      left: calc((100% - 7 * var(--cell-gap)) / 8 + var(--cell-gap));
+      top:  calc((100% - 7 * var(--cell-gap)) / 8 + var(--cell-gap));
+      width: calc(6 * (100% - 7 * var(--cell-gap)) / 8 + 5 * var(--cell-gap));
+      height: calc(6 * (100% - 7 * var(--cell-gap)) / 8 + 5 * var(--cell-gap));
 
-    /* Mini-Blur (≈3px) */
-    3px 3px 3px rgba(0,0,0,0.18);
-}
+      background:
+        linear-gradient(135deg, rgba(255,255,255,0.18), rgba(0,0,0,0.06)),
+        var(--floor);
 
-.s-2c{ grid-row:1; grid-column:2; }
-.s-2d{ grid-row:1; grid-column:3; }
-.s-3b{ grid-row:2; grid-column:1; }
-.s-4b{ grid-row:3; grid-column:1; }
-</style>
+      border-radius: 0;
+      z-index: 2;
+
+      box-shadow:
+        inset 14px 14px 26px rgba(255,255,255,0.14),
+        inset -18px -18px 34px rgba(0,0,0,0.22),
+        inset 0 0 0 1px rgba(0,0,0,0.12);
+    }
+
+    /* Würfel (3×3 oben links) */
+    .cube{
+      position:absolute;
+      z-index: 10;
+
+      left: calc((100% - 7 * var(--cell-gap)) / 8 + var(--cell-gap));
+      top:  calc((100% - 7 * var(--cell-gap)) / 8 + var(--cell-gap));
+
+      width: calc(3 * (100% - 7 * var(--cell-gap)) / 8 + 2 * var(--cell-gap));
+      height: calc(3 * (100% - 7 * var(--cell-gap)) / 8 + 2 * var(--cell-gap));
+
+      /* Holzstruktur + Ton */
+      background:
+        linear-gradient(135deg, rgba(255,255,255,0.20), rgba(0,0,0,0.07)),
+        repeating-linear-gradient(
+          12deg,
+          rgba(122,74,52,0.10) 0px,
+          rgba(122,74,52,0.10) 10px,
+          rgba(255,220,190,0.05) 10px,
+          rgba(255,220,190,0.05) 20px
+        ),
+        var(--cube-fill);
+
+      /* WICHTIG: outline statt border -> Slots bleiben exakt gefluchtet */
+      border: 0;
+      outline: var(--cube-outline) solid var(--cube-border);
+      outline-offset: 0;
+
+      border-radius: clamp(10px, 2.2vmin, 18px);
+
+      box-shadow:
+        0 12px 22px rgba(0,0,0,0.28),
+        0 0 0 1px rgba(255,255,255,0.10) inset;
+    }
+
+    /* Slots: exakt 3×3 ohne padding -> keine Verschiebung mehr */
+    .slots{
+      position:absolute;
+      inset: 0;
+      display:grid;
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-rows: repeat(3, 1fr);
+      gap: var(--cell-gap);
+      padding: 0;
+      box-sizing: border-box;
+      z-index: 20; /* über Würfelrahmen */
+      pointer-events:none;
+    }
+
+    .slot{
+      background:
+        linear-gradient(135deg, rgba(255,255,255,0.14), rgba(0,0,0,0.06)),
+        var(--slot-fill);
+
+      border: none;
+      border-radius: clamp(10px, 2.1vmin, 16px);
+
+      /* Rahmen als inset-shadow -> ändert keine Größe */
+      box-shadow:
+        inset 0 0 0 2px var(--slot-border);
+
+      /* Schatten: “nah anliegend”, wenig Unschärfe */
+      filter:
+        drop-shadow(2px 2px 0 rgba(0,0,0,0.22))
+        drop-shadow(3px 3px 3px rgba(0,0,0,0.16));
+    }
+
+    /* Positionen im 3×3 */
+    .s-2c{ grid-row:1; grid-column:2; }
+    .s-2d{ grid-row:1; grid-column:3; }
+    .s-3b{ grid-row:2; grid-column:1; }
+    .s-4b{ grid-row:3; grid-column:1; }
+  </style>
 </head>
 
 <body>
-<div class="stage">
-  <div class="board" id="board">
-    <div class="floor"></div>
-    <div class="grid" id="grid"></div>
+  <div class="stage">
+    <div class="board" id="board">
+      <div class="floor" aria-hidden="true"></div>
+      <div id="grid" class="grid" aria-label="8×8 Raster"></div>
 
-    <div class="cube">
-      <div class="slots">
-        <div class="slot s-2c"></div>
-        <div class="slot s-2d"></div>
-        <div class="slot s-3b"></div>
-        <div class="slot s-4b"></div>
+      <div class="cube" aria-label="Würfel">
+        <div class="slots" aria-hidden="true">
+          <div class="slot s-2c"></div>
+          <div class="slot s-2d"></div>
+          <div class="slot s-3b"></div>
+          <div class="slot s-4b"></div>
+        </div>
       </div>
     </div>
   </div>
-</div>
 
-<script>
-const board = document.getElementById("board");
-function setSquare(){
-  const w = board.getBoundingClientRect().width;
-  board.style.height = w + "px";
-}
-window.addEventListener("load", setSquare);
-window.addEventListener("resize", setSquare);
+  <script>
+    // ======= Quadrat erzwingen (Höhe = Breite) =======
+    const boardEl = document.getElementById("board");
 
-const cols=["A","B","C","D","E","F","G","H"];
-const grid=document.getElementById("grid");
-const map=new Map([
-["3A","c-orange"],["4A","c-gruen"],["5A","c-violett"],["6A","c-blau"],
-["8C","c-gruen"],["8D","c-orange"],["8E","c-gruen"],["8F","c-orange"],
-["6H","c-violett"],["5H","c-blau"],["4H","c-orange"],["3H","c-gruen"],
-["1F","c-blau"],["1E","c-violett"],["1D","c-blau"],["1C","c-violett"]
-]);
+    function setBoardSquare(){
+      const w = Math.round(boardEl.getBoundingClientRect().width);
+      boardEl.style.height = w + "px";
+    }
 
-for(let r=1;r<=8;r++){
-  for(let c=0;c<8;c++){
-    const d=document.createElement("div");
-    d.className="cell";
-    const k=`${r}${cols[c]}`;
-    if(map.has(k)) d.classList.add(map.get(k));
-    grid.appendChild(d);
-  }
-}
-</script>
+    window.addEventListener("load", () => {
+      setBoardSquare();
+      requestAnimationFrame(setBoardSquare);
+      setTimeout(setBoardSquare, 80);
+    });
+
+    window.addEventListener("resize", () => {
+      setBoardSquare();
+      requestAnimationFrame(setBoardSquare);
+    });
+
+    // ======= Raster bauen =======
+    const cols = ["A","B","C","D","E","F","G","H"];
+    const grid = document.getElementById("grid");
+
+    function key(r, cLetter){ return `${r}${cLetter}`; }
+
+    const colorMap = new Map([
+      [key(3,"A"), "c-orange"],
+      [key(4,"A"), "c-gruen"],
+      [key(5,"A"), "c-violett"],
+      [key(6,"A"), "c-blau"],
+
+      [key(8,"C"), "c-gruen"],
+      [key(8,"D"), "c-orange"],
+      [key(8,"E"), "c-gruen"],
+      [key(8,"F"), "c-orange"],
+
+      [key(6,"H"), "c-violett"],
+      [key(5,"H"), "c-blau"],
+      [key(4,"H"), "c-orange"],
+      [key(3,"H"), "c-gruen"],
+
+      [key(1,"F"), "c-blau"],
+      [key(1,"E"), "c-violett"],
+      [key(1,"D"), "c-blau"],
+      [key(1,"C"), "c-violett"],
+    ]);
+
+    for(let r=1; r<=8; r++){
+      for(let c=0; c<8; c++){
+        const cell = document.createElement("div");
+        cell.className = "cell";
+        const coord = key(r, cols[c]);
+        if(colorMap.has(coord)) cell.classList.add(colorMap.get(coord));
+        grid.appendChild(cell);
+      }
+    }
+  </script>
 </body>
 </html>
