--- a/index.html
+++ b/index.html
@@ -7,34 +7,36 @@
 
   <style>
     :root{
-      /* Farben */
       --violett: rgb(164, 27, 133);
       --blau:    rgb(0, 107, 179);
       --gruen:   rgb(0, 166, 82);
       --orange:  rgb(249, 150, 30);
 
-      /* Hintergrund */
       --bg1: #3a231a;
       --bg2: #1b0f0c;
 
-      /* Raster */
       --cell-gap: clamp(5px, 1.1vmin, 10px);
       --cell-radius: clamp(6px, 1.1vmin, 12px);
 
-      /* “Schwarz” für Rahmen/Trenner */
-      --frame-black: #0b0b0b;
-
-      /* Floor */
       --floor: #d8c8ad;
 
-      /* Würfel */
-      --cube-fill: #e3cfb6;        /* etwas dunkler als vorher */
-      --cube-border: #7a4a34;      /* dein schönes Braun */
-      --cube-outline: 4px;
+      /* Rahmen-Braun ist super */
+      --cube-border: #7a4a34;
 
-      /* Slots */
+      /* Würfeloberfläche */
+      --cube-wood-base: #d7c2a4;
+      --cube-wood-deep: #c9b08f;
+      --cube-wood-warm: rgba(155, 70, 110, 0.10);
+      --cube-wood-gold: rgba(249, 150, 30, 0.10);
+
+      /* Slot */
       --slot-border: rgba(0,0,0,0.55);
-      --slot-fill: rgba(255,255,255,0.12); /* ganz leicht, damit “gefüllt” wirkt */
+      --slot-border-w: 2px;
+      --slot-fill: #ead7be;
+
+      --board-border: 4px;
+      --board-border-color: #000;
+      --board-radius: clamp(14px, 2.2vmin, 22px);
     }
 
     html, body { height: 100%; }
@@ -43,12 +45,10 @@
       margin:0;
       display:flex;
       justify-content:center;
-
       background:
         radial-gradient(ellipse at top left, rgba(255,255,255,0.10), transparent 50%),
         radial-gradient(ellipse at bottom, rgba(0,0,0,0.35), transparent 60%),
         linear-gradient(180deg, var(--bg1), var(--bg2));
-
       font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
     }
 
@@ -63,24 +63,20 @@
     .board{
       position:relative;
       width: 100%;
-      height: 0;               /* per JS */
+      height: 0;
+      aspect-ratio: 1 / 1;
+      box-sizing: border-box;
+
+      background: #0b0b0b;
+
+      border: var(--board-border) solid var(--board-border-color);
+      border-radius: var(--board-radius);
+
       overflow: visible;
+
+      --cell: calc((100% - 7 * var(--cell-gap)) / 8);
     }
 
-    /* Außenrahmen: 4px schwarz + Radius */
-    .board::before{
-      content:"";
-      position:absolute;
-      inset:0;
-      border:4px solid var(--frame-black);
-      border-radius: clamp(12px, 2.2vmin, 20px);
-      pointer-events:none;
-      z-index: 50;
-      /* ganz dezenter Glanz innen */
-      box-shadow: inset 0 0 0 1px rgba(255,255,255,0.04);
-    }
-
-    /* 8×8 Raster */
     .grid{
       position:absolute;
       inset:0;
@@ -88,38 +84,34 @@
       grid-template-columns: repeat(8, 1fr);
       grid-template-rows: repeat(8, 1fr);
       gap: var(--cell-gap);
+      pointer-events: none;
       z-index: 1;
     }
 
     .cell{
-      background: var(--frame-black);
+      background:#0b0b0b;
       border-radius: var(--cell-radius);
-
-      /* 2px “Innenrahmen” pro Quadrat -> verhindert “Hintergrund blitzt durch” */
       box-shadow:
-        inset 0 0 0 2px var(--frame-black),
+        0 0 0 1px rgba(255,255,255,0.035) inset,
         0 10px 18px rgba(0,0,0,0.32);
     }
 
-    /* farbige Randfelder */
     .c-orange{ background: var(--orange); }
-    .c-gruen { background: var(--gruen);  }
+    .c-gruen { background: var(--gruen); }
     .c-violett{ background: var(--violett); }
-    .c-blau  { background: var(--blau);   }
+    .c-blau  { background: var(--blau); }
 
-    /* Floor (6×6 innen) */
     .floor{
       position:absolute;
-      left: calc((100% - 7 * var(--cell-gap)) / 8 + var(--cell-gap));
-      top:  calc((100% - 7 * var(--cell-gap)) / 8 + var(--cell-gap));
-      width: calc(6 * (100% - 7 * var(--cell-gap)) / 8 + 5 * var(--cell-gap));
-      height: calc(6 * (100% - 7 * var(--cell-gap)) / 8 + 5 * var(--cell-gap));
+      left: calc(var(--cell) + var(--cell-gap));
+      top:  calc(var(--cell) + var(--cell-gap));
+      width: calc(6 * var(--cell) + 5 * var(--cell-gap));
+      height: calc(6 * var(--cell) + 5 * var(--cell-gap));
 
       background:
         linear-gradient(135deg, rgba(255,255,255,0.18), rgba(0,0,0,0.06)),
         var(--floor);
 
-      border-radius: 0;
       z-index: 2;
 
       box-shadow:
@@ -128,100 +120,82 @@
         inset 0 0 0 1px rgba(0,0,0,0.12);
     }
 
-    /* Würfel (3×3 oben links) */
     .cube{
       position:absolute;
-      z-index: 10;
+      left: calc(var(--cell) + var(--cell-gap));
+      top:  calc(var(--cell) + var(--cell-gap));
 
-      left: calc((100% - 7 * var(--cell-gap)) / 8 + var(--cell-gap));
-      top:  calc((100% - 7 * var(--cell-gap)) / 8 + var(--cell-gap));
+      width: calc(3 * var(--cell) + 2 * var(--cell-gap));
+      height: calc(3 * var(--cell) + 2 * var(--cell-gap));
 
-      width: calc(3 * (100% - 7 * var(--cell-gap)) / 8 + 2 * var(--cell-gap));
-      height: calc(3 * (100% - 7 * var(--cell-gap)) / 8 + 2 * var(--cell-gap));
-
-      /* Holzstruktur + Ton */
       background:
-        linear-gradient(135deg, rgba(255,255,255,0.20), rgba(0,0,0,0.07)),
+        radial-gradient(120% 90% at 15% 15%, var(--cube-wood-gold), transparent 55%),
+        radial-gradient(120% 90% at 25% 25%, var(--cube-wood-warm), transparent 60%),
         repeating-linear-gradient(
-          12deg,
-          rgba(122,74,52,0.10) 0px,
-          rgba(122,74,52,0.10) 10px,
-          rgba(255,220,190,0.05) 10px,
-          rgba(255,220,190,0.05) 20px
+          20deg,
+          rgba(0,0,0,0.02) 0px,
+          rgba(0,0,0,0.02) 10px,
+          rgba(255,255,255,0.02) 10px,
+          rgba(255,255,255,0.02) 18px
         ),
-        var(--cube-fill);
+        linear-gradient(135deg, rgba(255,255,255,0.16), rgba(0,0,0,0.08)),
+        linear-gradient(180deg, var(--cube-wood-base), var(--cube-wood-deep));
 
-      /* WICHTIG: outline statt border -> Slots bleiben exakt gefluchtet */
-      border: 0;
-      outline: var(--cube-outline) solid var(--cube-border);
-      outline-offset: 0;
-
+      border: 4px solid var(--cube-border);
       border-radius: clamp(10px, 2.2vmin, 18px);
 
       box-shadow:
         0 12px 22px rgba(0,0,0,0.28),
         0 0 0 1px rgba(255,255,255,0.10) inset;
+
+      z-index: 5;
     }
 
-    /* Slots: exakt 3×3 ohne padding -> keine Verschiebung mehr */
-    .slots{
-      position:absolute;
-      inset: 0;
-      display:grid;
-      grid-template-columns: repeat(3, 1fr);
-      grid-template-rows: repeat(3, 1fr);
-      gap: var(--cell-gap);
-      padding: 0;
-      box-sizing: border-box;
-      z-index: 20; /* über Würfelrahmen */
-      pointer-events:none;
-    }
-
+    /* Steckplättchen – NUR HIER geändert */
     .slot{
+      position:absolute;
+      width: var(--cell);
+      height: var(--cell);
+      box-sizing: border-box;
+
       background:
-        linear-gradient(135deg, rgba(255,255,255,0.14), rgba(0,0,0,0.06)),
+        linear-gradient(135deg, rgba(255,255,255,0.14), rgba(0,0,0,0.05)),
         var(--slot-fill);
 
-      border: none;
-      border-radius: clamp(10px, 2.1vmin, 16px);
+      border: var(--slot-border-w) solid var(--slot-border);
+      border-radius: var(--cell-radius);
 
-      /* Rahmen als inset-shadow -> ändert keine Größe */
+      z-index: 7;
+
       box-shadow:
-        inset 0 0 0 2px var(--slot-border);
-
-      /* Schatten: “nah anliegend”, wenig Unschärfe */
-      filter:
-        drop-shadow(2px 2px 0 rgba(0,0,0,0.22))
-        drop-shadow(3px 3px 3px rgba(0,0,0,0.16));
+        1px 1px 0 rgba(255,255,255,0.18) inset,
+        -1px -1px 0 rgba(0,0,0,0.08) inset,
+        0 3px 5px rgba(0,0,0,0.22),
+        2px 2px 3px -1px rgba(0,0,0,0.20);
     }
 
-    /* Positionen im 3×3 */
-    .s-2c{ grid-row:1; grid-column:2; }
-    .s-2d{ grid-row:1; grid-column:3; }
-    .s-3b{ grid-row:2; grid-column:1; }
-    .s-4b{ grid-row:3; grid-column:1; }
+    .slot-2c{ left: calc(2 * (var(--cell) + var(--cell-gap))); top:  calc(1 * (var(--cell) + var(--cell-gap))); }
+    .slot-2d{ left: calc(3 * (var(--cell) + var(--cell-gap))); top:  calc(1 * (var(--cell) + var(--cell-gap))); }
+    .slot-3b{ left: calc(1 * (var(--cell) + var(--cell-gap))); top:  calc(2 * (var(--cell) + var(--cell-gap))); }
+    .slot-4b{ left: calc(1 * (var(--cell) + var(--cell-gap))); top:  calc(3 * (var(--cell) + var(--cell-gap))); }
   </style>
 </head>
 
 <body>
   <div class="stage">
     <div class="board" id="board">
-      <div class="floor" aria-hidden="true"></div>
-      <div id="grid" class="grid" aria-label="8×8 Raster"></div>
+      <div class="floor"></div>
+      <div id="grid" class="grid"></div>
+      <div class="cube"></div>
 
-      <div class="cube" aria-label="Würfel">
-        <div class="slots" aria-hidden="true">
-          <div class="slot s-2c"></div>
-          <div class="slot s-2d"></div>
-          <div class="slot s-3b"></div>
-          <div class="slot s-4b"></div>
-        </div>
-      </div>
+      <div class="slot slot-2c"></div>
+      <div class="slot slot-2d"></div>
+      <div class="slot slot-3b"></div>
+      <div class="slot slot-4b"></div>
     </div>
   </div>
 
   <script>
-    // ======= Quadrat erzwingen (Höhe = Breite) =======
     const boardEl = document.getElementById("board");
 
     function setBoardSquare(){
@@ -240,7 +214,6 @@
       requestAnimationFrame(setBoardSquare);
     });
 
-    // ======= Raster bauen =======
     const cols = ["A","B","C","D","E","F","G","H"];
     const grid = document.getElementById("grid");
 
@@ -272,8 +245,12 @@
       for(let c=0; c<8; c++){
         const cell = document.createElement("div");
         cell.className = "cell";
+
         const coord = key(r, cols[c]);
-        if(colorMap.has(coord)) cell.classList.add(colorMap.get(coord));
+        if(colorMap.has(coord)){
+          cell.classList.add(colorMap.get(coord));
+        }
+
         grid.appendChild(cell);
       }
     }
