--- a/index.html
+++ b/index.html
@@ -18,16 +18,17 @@
       --cell-gap: clamp(5px, 1.1vmin, 10px);
       --cell-radius: clamp(6px, 1.1vmin, 12px);
 
-      --floor: #d8c8ad;
+      /* ÄNDERUNG #1: Innenraum-Boden -> Braun wie Würfelumrahmung */
+      --floor: #7a4a34;
 
       /* Rahmen-Braun ist super */
       --cube-border: #7a4a34;
 
-      /* Würfeloberfläche */
-      --cube-wood-base: #d7c2a4;
-      --cube-wood-deep: #c9b08f;
-      --cube-wood-warm: rgba(155, 70, 110, 0.10);
-      --cube-wood-gold: rgba(249, 150, 30, 0.10);
+      /* Würfeloberfläche: dunkler + wärmer */
+      --cube-wood-base: #d7c2a4;  /* dunkler als vorher */
+      --cube-wood-deep: #c9b08f;  /* Schatten */
+      --cube-wood-warm: rgba(155, 70, 110, 0.10); /* Magenta-Hauch */
+      --cube-wood-gold: rgba(249, 150, 30, 0.10); /* Gelb/Orange-Hauch */
 
       /* Slot */
       --slot-border: rgba(0,0,0,0.55);
@@ -63,8 +64,8 @@
     .board{
       position:relative;
       width: 100%;
-      height: 0;
-      aspect-ratio: 1 / 1;
+      height: 0;             /* wird per JS gesetzt */
+      aspect-ratio: 1 / 1;   /* Backup */
       box-sizing: border-box;
 
       background: #0b0b0b;
@@ -74,6 +75,7 @@
 
       overflow: visible;
 
+      /* Zellmaß als Variable */
       --cell: calc((100% - 7 * var(--cell-gap)) / 8);
     }
 
@@ -97,9 +99,9 @@
     }
 
     .c-orange{ background: var(--orange); }
-    .c-gruen { background: var(--gruen); }
+    .c-gruen { background: var(--gruen);  }
     .c-violett{ background: var(--violett); }
-    .c-blau  { background: var(--blau); }
+    .c-blau  { background: var(--blau);   }
 
     .floor{
       position:absolute;
@@ -112,7 +114,9 @@
         linear-gradient(135deg, rgba(255,255,255,0.18), rgba(0,0,0,0.06)),
         var(--floor);
 
+      border-radius: 0;
       z-index: 2;
+      pointer-events: none;
 
       box-shadow:
         inset 14px 14px 26px rgba(255,255,255,0.14),
@@ -120,6 +124,42 @@
         inset 0 0 0 1px rgba(0,0,0,0.12);
     }
 
+    /* ÄNDERUNG #2: Kugel im Mittelpunkt, unter dem Würfel */
+    .ball{
+      position:absolute;
+
+      /* Mittelpunkt der 6x6 Innenfläche (floor) */
+      left: calc(
+        (var(--cell) + var(--cell-gap)) +
+        ( (6 * var(--cell) + 5 * var(--cell-gap)) / 2 )
+      );
+      top: calc(
+        (var(--cell) + var(--cell-gap)) +
+        ( (6 * var(--cell) + 5 * var(--cell-gap)) / 2 )
+      );
+
+      /* Symbolisch etwas größer als im Original (wie gewünscht) */
+      width: calc(var(--cell) * 0.55);
+      height: calc(var(--cell) * 0.55);
+      border-radius: 50%;
+
+      transform: translate(-50%, -50%);
+
+      /* Holzkugel-Optik: Licht oben/links, Schatten unten/rechts */
+      background:
+        radial-gradient(circle at 30% 28%, rgba(255,255,255,0.55), rgba(255,255,255,0.0) 45%),
+        radial-gradient(circle at 55% 60%, rgba(0,0,0,0.18), rgba(0,0,0,0.00) 55%),
+        radial-gradient(circle at 50% 55%, #d6b996, #b88d63 70%);
+
+      box-shadow:
+        0 3px 6px rgba(0,0,0,0.28);
+
+      /* Wichtig: unter dem Würfel (cube z-index 5) */
+      z-index: 4;
+      pointer-events: none;
+    }
+
+    /* Würfel */
     .cube{
       position:absolute;
       left: calc(var(--cell) + var(--cell-gap));
@@ -131,6 +171,7 @@
       background:
         radial-gradient(120% 90% at 15% 15%, var(--cube-wood-gold), transparent 55%),
         radial-gradient(120% 90% at 25% 25%, var(--cube-wood-warm), transparent 60%),
+
         repeating-linear-gradient(
           20deg,
           rgba(0,0,0,0.02) 0px,
@@ -138,6 +179,7 @@
           rgba(255,255,255,0.02) 10px,
           rgba(255,255,255,0.02) 18px
         ),
+
         linear-gradient(135deg, rgba(255,255,255,0.16), rgba(0,0,0,0.08)),
         linear-gradient(180deg, var(--cube-wood-base), var(--cube-wood-deep));
 
@@ -149,9 +191,10 @@
         0 0 0 1px rgba(255,255,255,0.10) inset;
 
       z-index: 5;
+      pointer-events: none;
     }
 
-    /* Steckplättchen – NUR HIER geändert */
+    /* Slots: (dein realistischerer Schatten bleibt) */
     .slot{
       position:absolute;
       width: var(--cell);
@@ -166,6 +209,7 @@
       border-radius: var(--cell-radius);
 
       z-index: 7;
+      pointer-events: none;
 
       box-shadow:
         1px 1px 0 rgba(255,255,255,0.18) inset,
@@ -174,6 +218,7 @@
         2px 2px 3px -1px rgba(0,0,0,0.20);
     }
 
+    /* Positionen (Rasterkoordinaten) */
     .slot-2c{ left: calc(2 * (var(--cell) + var(--cell-gap))); top:  calc(1 * (var(--cell) + var(--cell-gap))); }
     .slot-2d{ left: calc(3 * (var(--cell) + var(--cell-gap))); top:  calc(1 * (var(--cell) + var(--cell-gap))); }
     .slot-3b{ left: calc(1 * (var(--cell) + var(--cell-gap))); top:  calc(2 * (var(--cell) + var(--cell-gap))); }
@@ -184,18 +229,25 @@
 <body>
   <div class="stage">
     <div class="board" id="board">
-      <div class="floor"></div>
-      <div id="grid" class="grid"></div>
-      <div class="cube"></div>
+      <div class="floor" aria-hidden="true"></div>
 
-      <div class="slot slot-2c"></div>
-      <div class="slot slot-2d"></div>
-      <div class="slot slot-3b"></div>
-      <div class="slot slot-4b"></div>
+      <!-- Kugel (unter dem Würfel) -->
+      <div class="ball" aria-label="Kugel"></div>
+
+      <div id="grid" class="grid" aria-label="8×8 Raster"></div>
+
+      <div class="cube" aria-label="Würfel"></div>
+
+      <!-- Slots -->
+      <div class="slot slot-2c" aria-label="Slot 2C"></div>
+      <div class="slot slot-2d" aria-label="Slot 2D"></div>
+      <div class="slot slot-3b" aria-label="Slot 3B"></div>
+      <div class="slot slot-4b" aria-label="Slot 4B"></div>
     </div>
   </div>
 
   <script>
+    // Quadrat erzwingen (Höhe = Breite)
     const boardEl = document.getElementById("board");
 
     function setBoardSquare(){
@@ -214,6 +266,7 @@
       requestAnimationFrame(setBoardSquare);
     });
 
+    // Raster bauen
     const cols = ["A","B","C","D","E","F","G","H"];
     const grid = document.getElementById("grid");
 
