--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       --gruen:   rgb(0, 166, 82);
       --orange:  rgb(249, 150, 30);
 
-      /* ✅ FIXIERT: Tisch/Umgebung-Farbton als wiederverwendbare Variable */
+      /* ✅ fixierter Tisch-Farbton */
       --table-dark: #1b0f0c;   /* dunkles Schwarzbraun */
       --table-mid:  #3a231a;   /* warmes Braun */
 
@@ -48,34 +48,36 @@
       display:flex;
       justify-content:center;
 
-      /* ✅ FIXIERT: Tisch-Hintergrund (Holz + dunkler Ton + dezente Vignette) */
+      /* ✅ NEU (sichtbar!): Holz-/Tischfläche ohne Blend-Mode */
       background:
-        radial-gradient(ellipse at center, rgba(0,0,0,0.00) 35%, rgba(0,0,0,0.34) 100%),
-        radial-gradient(ellipse at top left, rgba(255,255,255,0.07), transparent 55%),
+        /* Vignette (dein dunkler Farbton) */
+        radial-gradient(ellipse at center, rgba(0,0,0,0.00) 40%, rgba(0,0,0,0.38) 100%),
 
-        /* dunkle Grundstimmung (unser gemerkter Braunton) */
-        linear-gradient(180deg, var(--table-mid), var(--table-dark)),
+        /* leichte „Schattenkante“ von oben/unten (Feeling wie Foto) */
+        linear-gradient(180deg, rgba(0,0,0,0.20), rgba(0,0,0,0.00) 18%, rgba(0,0,0,0.00) 82%, rgba(0,0,0,0.22)),
 
-        /* Holzstruktur (Streifen + leichte Varianz) */
+        /* Brett-/Streifenstruktur (Planken) */
         repeating-linear-gradient(
           90deg,
-          rgba(255,255,255,0.05) 0px,
-          rgba(255,255,255,0.05) 40px,
-          rgba(0,0,0,0.05) 40px,
-          rgba(0,0,0,0.05) 82px
+          rgba(0,0,0,0.10) 0px,
+          rgba(0,0,0,0.10) 2px,
+          rgba(255,255,255,0.04) 2px,
+          rgba(255,255,255,0.04) 56px
         ),
-        linear-gradient(90deg,
-          rgba(0,0,0,0.06) 0%,
-          rgba(0,0,0,0.00) 14%,
-          rgba(0,0,0,0.04) 34%,
-          rgba(0,0,0,0.00) 52%,
-          rgba(0,0,0,0.05) 72%,
-          rgba(0,0,0,0.00) 86%,
-          rgba(0,0,0,0.06) 100%
-        );
 
-      background-blend-mode: normal, normal, normal, overlay, normal;
+        /* feine Holzmaserung (leicht diagonal) */
+        repeating-linear-gradient(
+          12deg,
+          rgba(0,0,0,0.05) 0px,
+          rgba(0,0,0,0.05) 8px,
+          rgba(255,255,255,0.03) 8px,
+          rgba(255,255,255,0.03) 16px
+        ),
 
+        /* Holz-Basis (heller, damit man es sicher sieht) */
+        linear-gradient(180deg, #e0b47c, #c89259);
+
+      background-attachment: fixed;
       font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
     }
 
@@ -149,7 +151,6 @@
         inset 0 0 0 1px rgba(0,0,0,0.12);
     }
 
-    /* Kugel im Mittelpunkt, unter dem Würfel */
     .ball{
       position:absolute;
       left: calc(
