Schatten Boxinneres, Box außen

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
       --gruen:   rgb(0, 166, 82);
       --orange:  rgb(249, 150, 30);
 
-      /* ✅ fixierter Tisch-Farbton */
-      --table-dark: #1b0f0c;   /* dunkles Schwarzbraun */
-      --table-mid:  #3a231a;   /* warmes Braun */
+      /* Fixierter Tisch-Farbton */
+      --table-dark: #1b0f0c;
+      --table-mid:  #3a231a;
 
       --cell-gap: clamp(5px, 1.1vmin, 10px);
       --cell-radius: clamp(6px, 1.1vmin, 12px);
@@ -48,15 +48,10 @@
       display:flex;
       justify-content:center;
 
-      /* ✅ NEU (sichtbar!): Holz-/Tischfläche ohne Blend-Mode */
+      /* Tischfläche (sichtbar) */
       background:
-        /* Vignette (dein dunkler Farbton) */
         radial-gradient(ellipse at center, rgba(0,0,0,0.00) 40%, rgba(0,0,0,0.38) 100%),
-
-        /* leichte „Schattenkante“ von oben/unten (Feeling wie Foto) */
         linear-gradient(180deg, rgba(0,0,0,0.20), rgba(0,0,0,0.00) 18%, rgba(0,0,0,0.00) 82%, rgba(0,0,0,0.22)),
-
-        /* Brett-/Streifenstruktur (Planken) */
         repeating-linear-gradient(
           90deg,
           rgba(0,0,0,0.10) 0px,
@@ -64,8 +59,6 @@
           rgba(255,255,255,0.04) 2px,
           rgba(255,255,255,0.04) 56px
         ),
-
-        /* feine Holzmaserung (leicht diagonal) */
         repeating-linear-gradient(
           12deg,
           rgba(0,0,0,0.05) 0px,
@@ -73,8 +66,6 @@
           rgba(255,255,255,0.03) 8px,
           rgba(255,255,255,0.03) 16px
         ),
-
-        /* Holz-Basis (heller, damit man es sicher sieht) */
         linear-gradient(180deg, #e0b47c, #c89259);
 
       background-attachment: fixed;
@@ -103,7 +94,14 @@
 
       overflow: visible;
 
+      /* Zellmaß als Variable */
       --cell: calc((100% - 7 * var(--cell-gap)) / 8);
+
+      /* ✅ NEU: Außenschatten des Rahmens/der Box auf den Tisch
+         Licht links oben -> Schatten nach rechts/unten, weich (70mm Höhe) */
+      box-shadow:
+        10px 18px 42px rgba(0,0,0,0.55),
+        3px 6px 16px rgba(0,0,0,0.35);
     }
 
     .grid{
@@ -145,12 +143,24 @@
       z-index: 2;
       pointer-events: none;
 
+      /* ✅ NEU: Innenschatten vom Rahmen in den Innenraum
+         Licht links oben -> rechts/unten innen deutlich, oben/links nur sehr subtil */
       box-shadow:
+        /* deine bisherigen Innenraum-Facetten */
         inset 14px 14px 26px rgba(255,255,255,0.14),
         inset -18px -18px 34px rgba(0,0,0,0.22),
-        inset 0 0 0 1px rgba(0,0,0,0.12);
+        inset 0 0 0 1px rgba(0,0,0,0.12),
+
+        /* Rahmen wirft Schatten in den Innenraum (rechts + unten) */
+        inset -22px 0 34px rgba(0,0,0,0.30),   /* rechter Innenschatten */
+        inset 0 -22px 34px rgba(0,0,0,0.34),   /* unterer Innenschatten */
+
+        /* minimaler Gegenschatten oben/links (nur ganz leicht) */
+        inset 10px 0 22px rgba(255,255,255,0.05),
+        inset 0 10px 22px rgba(255,255,255,0.04);
     }
 
+    /* Kugel im Mittelpunkt, unter dem Würfel */
     .ball{
       position:absolute;
       left: calc(
@@ -175,7 +185,7 @@
       box-shadow:
         0 3px 6px rgba(0,0,0,0.28);
 
-      z-index: 4;
+      z-index: 4; /* unter dem Würfel */
       pointer-events: none;
     }
 
@@ -207,7 +217,7 @@
         0 12px 22px rgba(0,0,0,0.28),
         0 0 0 1px rgba(255,255,255,0.10) inset;
 
-      z-index: 5;
+      z-index: 5; /* ✅ über den Rahmenschatten */
       pointer-events: none;
     }
 
@@ -224,7 +234,7 @@
       border: var(--slot-border-w) solid var(--slot-border);
       border-radius: var(--cell-radius);
 
-      z-index: 7;
+      z-index: 7; /* ✅ ganz oben */
       pointer-events: none;
 
       box-shadow:
@@ -234,6 +244,7 @@
         2px 2px 3px -1px rgba(0,0,0,0.20);
     }
 
+    /* Positionen (Rasterkoordinaten) */
     .slot-2c{ left: calc(2 * (var(--cell) + var(--cell-gap))); top:  calc(1 * (var(--cell) + var(--cell-gap))); }
     .slot-2d{ left: calc(3 * (var(--cell) + var(--cell-gap))); top:  calc(1 * (var(--cell) + var(--cell-gap))); }
     .slot-3b{ left: calc(1 * (var(--cell) + var(--cell-gap))); top:  calc(2 * (var(--cell) + var(--cell-gap))); }
