--- a/index.html
+++ b/index.html
@@ -97,8 +97,7 @@
       /* Zellmaß als Variable */
       --cell: calc((100% - 7 * var(--cell-gap)) / 8);
 
-      /* ✅ NEU: Außenschatten des Rahmens/der Box auf den Tisch
-         Licht links oben -> Schatten nach rechts/unten, weich (70mm Höhe) */
+      /* Außenschatten des Rahmens/der Box auf den Tisch */
       box-shadow:
         10px 18px 42px rgba(0,0,0,0.55),
         3px 6px 16px rgba(0,0,0,0.35);
@@ -143,24 +142,20 @@
       z-index: 2;
       pointer-events: none;
 
-      /* ✅ NEU: Innenschatten vom Rahmen in den Innenraum
-         Licht links oben -> rechts/unten innen deutlich, oben/links nur sehr subtil */
+      /* ✅ Update: gleicher tiefer Innenschatten auf ALLEN 4 Innenkanten */
       box-shadow:
         /* deine bisherigen Innenraum-Facetten */
         inset 14px 14px 26px rgba(255,255,255,0.14),
         inset -18px -18px 34px rgba(0,0,0,0.22),
         inset 0 0 0 1px rgba(0,0,0,0.12),
 
-        /* Rahmen wirft Schatten in den Innenraum (rechts + unten) */
-        inset -22px 0 34px rgba(0,0,0,0.30),   /* rechter Innenschatten */
-        inset 0 -22px 34px rgba(0,0,0,0.34),   /* unterer Innenschatten */
-
-        /* minimaler Gegenschatten oben/links (nur ganz leicht) */
-        inset 10px 0 22px rgba(255,255,255,0.05),
-        inset 0 10px 22px rgba(255,255,255,0.04);
+        /* Schatten rundum innen (gleich tief) */
+        inset -22px 0 34px rgba(0,0,0,0.30),  /* rechts innen */
+        inset  22px 0 34px rgba(0,0,0,0.30),  /* links innen */
+        inset  0 -22px 34px rgba(0,0,0,0.34), /* unten innen */
+        inset  0  22px 34px rgba(0,0,0,0.34); /* oben innen */
     }
 
-    /* Kugel im Mittelpunkt, unter dem Würfel */
     .ball{
       position:absolute;
       left: calc(
@@ -185,7 +180,7 @@
       box-shadow:
         0 3px 6px rgba(0,0,0,0.28);
 
-      z-index: 4; /* unter dem Würfel */
+      z-index: 4;
       pointer-events: none;
     }
 
@@ -217,7 +212,7 @@
         0 12px 22px rgba(0,0,0,0.28),
         0 0 0 1px rgba(255,255,255,0.10) inset;
 
-      z-index: 5; /* ✅ über den Rahmenschatten */
+      z-index: 5;
       pointer-events: none;
     }
 
@@ -234,7 +229,7 @@
       border: var(--slot-border-w) solid var(--slot-border);
       border-radius: var(--cell-radius);
 
-      z-index: 7; /* ✅ ganz oben */
+      z-index: 7;
       pointer-events: none;
 
       box-shadow:
@@ -244,7 +239,6 @@
         2px 2px 3px -1px rgba(0,0,0,0.20);
     }
 
-    /* Positionen (Rasterkoordinaten) */
     .slot-2c{ left: calc(2 * (var(--cell) + var(--cell-gap))); top:  calc(1 * (var(--cell) + var(--cell-gap))); }
     .slot-2d{ left: calc(3 * (var(--cell) + var(--cell-gap))); top:  calc(1 * (var(--cell) + var(--cell-gap))); }
     .slot-3b{ left: calc(1 * (var(--cell) + var(--cell-gap))); top:  calc(2 * (var(--cell) + var(--cell-gap))); }
